<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="favorite">Favorite</string>
    <string name="header_time_and_date">TIME &amp; DATE</string>
    <string name="header_location">LOCATION</string>
    <string name="header_contact">CONTACT</string>
    <string name="header_credits">CREDITS</string>
    <string name="credits_content">Lovingly created by Xebia.</string>
    <string name="credits_android">Android: Steven Mulder, with the help of Barend Garvelink, Jeroen Willemsen and Nanne Baars.</string>
    <string name="credits_ios">iOS: Jeroen Leenarts and Lammert Westerhoff.</string>
    <string name="credits_misc">Testing and snarky remarks by Joshua Appelman and Sannie Kwakman.</string>
    <string name="descr_maps">maps icon</string>
    <string name="descr_contact">contact icon</string>
    <string name="descr_speaker">Photo</string>
    <string name="descr_logo">logo</string>
    <string name="activity_not_found">Could not open corresponding app!</string>
    <string name="attribution_header">ATTRIBUTIONS</string>
    <string name="attribution">This app is built using the following third party software:</string>
    <string name="terms_header">TERMS &amp; CONDITIONS</string>
    <string name="details_placeholder">Select a session from the list to view the details</string>
    <string name="drawer_open">open navigation drawer</string>
    <string name="drawer_close">close navigation drawer</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_event_info">Event Info</string>
    <string name="nav_legal">Legal</string>
    <string name="nav_notifications">Notifications</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_everything">All Tracks</string>
    <string name="menu_filter_favourites">Favourites</string>
    <string name="notification_subtitle">In 5 minutes in %1$s</string>
    <string name="notification_subtitle_no_room">In 5 minutes</string>
    <string name="notification_big_text">In 5 minutes in %2$s — %1$s</string>
    <string name="notification_big_text_no_room">In 5 minutes — %1$s</string>
    <string name="favorite_added">Added to favorites</string>
    <string name="favorite_removed">Removed from favorites</string>
</resources>
